--- a/russian-travel-main/blocks/place/__paragraph/place__paragraph.css
+++ b/russian-travel-main/blocks/place/__paragraph/place__paragraph.css
@@ -3,6 +3,9 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 26px;
+    max-width: 288px;
+    margin-left: 16px;
+    margin-bottom: 0;
 }
 
 .place__paragraph:nth-child(2) {
@@ -15,7 +18,7 @@
 
 @media screen and (min-width: 768px) {
     .place__paragraph {
-        min-width: 352px;
+        max-width: 352px;
         margin-top: 0;
     }
     .place__paragraph:first-child {
@@ -30,7 +33,7 @@
     .place__paragraph {
         font-size: 18px;
         line-height: 29px;
-        min-width: 456px;
+        max-width: 456px;
     }
     .place__paragraph:nth-child(2) {
         margin-top: 26px;
@@ -39,6 +42,6 @@
 
 @media screen and (min-width: 1280px) {
     .place__paragraph {
-        min-width: 484px;
+        max-width: 484px;
     }
 }
