--- a/russian-travel-main/blocks/cover/__title/cover__title.css
+++ b/russian-travel-main/blocks/cover/__title/cover__title.css
@@ -4,9 +4,8 @@
    line-height: 35px;
    text-align: center;
    z-index: 8;
-   grid-row: 2/2;
-   grid-column: 1/1;
    margin: 0;
+   color: #fff;
 }
 
 @media screen and (min-width: 768px) {
