--- a/russian-travel-main/blocks/footer/__link/footer__link.css
+++ b/russian-travel-main/blocks/footer/__link/footer__link.css
@@ -1,52 +1,11 @@
-/* .footer__link {
-    text-decoration: none;
-    color: white;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 24px;
-    margin-left: 16px;
-}
-
-.footer__link:hover {
-    opacity: 0.8;
-}
-
-.footer__link:first-child {
-    margin-top: 0;
-}
-
-.footer__link:not(:first-child) {
-    margin-top: 32px;
-}
-
-@media screen and (min-width: 768px) {
-    .footer__link {
-        font-size: 16px;
-        line-height: 18px;
-        margin-left: 0;
-        margin-bottom: 24px;
-    }
-    .footer__link:not(:last-child) {
-        margin-right: 18px;
-    }
-    .footer__link:not(:first-child) {
-        margin-top: 0;
-    }
-    .footer__link:first-child {
-        margin-left: 24px;
-    }
-} */
-
 .footer__link {
     text-decoration: none;
     color: white;
     font-weight: 400;
     font-size: 24px;
     line-height: 24px;
-}
-
-.footer__link:not(:first-child) {
-    padding-top: 32px;
+    display: block;
+    margin-bottom: 32px;
 }
 
 .footer__link:hover {
@@ -57,9 +16,6 @@
     .footer__link {
         font-size: 16px;
         line-height: 18px;
-        padding-right: 18px;
-    }
-    .footer__link:not(:first-child) {
-        padding-top: 0;
+        margin-right: 18px;
     }
 }
