--- a/russian-travel-main/blocks/footer/footer.css
+++ b/russian-travel-main/blocks/footer/footer.css
@@ -1,15 +1,26 @@
 .footer {
-    display: flex;
-    flex-direction: column;
     padding-left: 16px;
     padding-bottom: 24px;
+    list-style-type: none;
+    margin-top: 64px;
 }
 
 @media screen and (min-width: 768px) {
     .footer {
+        display: flex;
         flex-direction: row;
-        align-items: end;
+        justify-content: space-between;
+        align-items: baseline;
         padding-left: 24px;
-        height: 18px;
+        padding-right: 24px;
+        margin-top: 88px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .footer {
+        padding-left: 48px;
+        padding-right: 48px;
+        margin-top: 92px;
     }
 }
