--- a/russian-travel-main/blocks/header/__lang-link/header__lang-link.css
+++ b/russian-travel-main/blocks/header/__lang-link/header__lang-link.css
@@ -3,16 +3,17 @@
     font-weight: 400;
     text-decoration: none;
     color: #fff;
+    line-height: 20px;
 }
 
-.header__lang-link:first-child {
-    margin-right: 18px;
-    text-decoration: underline;
+.header__lang-link:hover {
+    opacity: 0.8;
 }
 
 @media screen and (min-width: 768px) {
     .header__lang-link {
         font-size: 24px;
         font-weight: 400;
+        line-height: 28px;
     }
 }
