--- a/russian-travel-main/blocks/header/__logo/header__logo.css
+++ b/russian-travel-main/blocks/header/__logo/header__logo.css
@@ -1,9 +1,12 @@
 .header__logo {
-    max-width: 142px;
+    width: 142px;
+    height: 42px;
+    object-fit: cover;
 }
 
 @media screen and (min-width: 768px) {
     .header__logo {
-        max-width: 176px;
+        width: 176px;
+        height: 52px;
     }
 }
