--- a/russian-travel-main/blocks/place/__image/place__image.css
+++ b/russian-travel-main/blocks/place/__image/place__image.css
@@ -1,18 +1,7 @@
-/* .place__image {
-    width: 100%;
-    margin-top: 32px;
-}
-
-@media screen and (min-width: 768px) {
-    .place__image {
-        margin: 48px auto 0 24px;
-        width: 1fr;
-    }
-} */
-
 .place__image {
     width: 100%;
     grid-area: image;
+    object-fit: cover;
 }
 
 @media screen and (min-width: 768px) {
