--- a/russian-travel-main/blocks/place/__title/place__title.css
+++ b/russian-travel-main/blocks/place/__title/place__title.css
@@ -1,8 +1,9 @@
-/* .place__title {
+.place__title {
     max-width: 288px;
     font-weight: 900;
     font-size: 32px;
     line-height: 35px;
+    grid-area: title;
     margin: 0 auto 0 16px;
 }
 
@@ -10,8 +11,7 @@
     .place__title {
         font-size: 42px;
         line-height: 46px;
-        margin: 0 auto 0 24px;
-        max-width: 340px;
+        margin-left: 0;
     }
 }
 
@@ -19,45 +19,5 @@
     .place__title {
         font-size: 72px;
         line-height: 76px;
-        margin: 0 auto 0 48px;
-        max-width: 440px;
-    }
-}
-
-@media screen and (min-width: 1280px) {
-    .place__title {
-        margin: 0 auto 0 148px;
-        max-width: 460px;
-    }
-} */
-
-.place__title {
-    max-width: 288px;
-    font-weight: 900;
-    font-size: 32px;
-    line-height: 35px;
-    grid-area: title;
-    margin-left: 16px;
-}
-
-@media screen and (min-width: 768px) {
-    .place__title {
-        font-size: 42px;
-        line-height: 46px;
-        margin-left: 24px;
-    }
-}
-
-@media screen and (min-width: 1024px) {
-    .place__title {
-        font-size: 72px;
-        line-height: 76px;
-        margin-left: 48px;
-    }
-}
-
-@media screen and (min-width: 1280px) {
-    .place__title {
-        margin-left: 148px;
     }
 }
