--- a/russian-travel-main/blocks/place/__url-heading/place__url-heading.css
+++ b/russian-travel-main/blocks/place/__url-heading/place__url-heading.css
@@ -1,18 +1,11 @@
-/* .place__url-heading {
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 12px;
-    letter-spacing: 2px;
-    color: #aaa;
-    margin: 32px 16px 0 16px;
-} */
-
 .place__url-heading {
     font-weight: 400;
     font-size: 12px;
     line-height: 12px;
     letter-spacing: 2px;
     color: #aaa;
+    text-transform: uppercase;
+    margin: 0;
 }
 
 @media screen and (min-width: 1024px) {
