--- a/russian-travel-main/blocks/footer/__link/footer__link.css
+++ b/russian-travel-main/blocks/footer/__link/footer__link.css
@@ -16,6 +16,6 @@
     .footer__link {
         font-size: 16px;
         line-height: 18px;
-        margin-right: 18px;
+        margin: 0 18px 0 0;
     }
 }
