--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -43,6 +43,6 @@
 
 @media screen and (min-width: 1280px) {
     .cover__overlay {
-        max-height: 740px;
+        min-height: 740px;
     }
 }
