--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -15,6 +15,8 @@
 
 @media screen and (min-width: 1280px) {
     .intro {
-        margin-left: 11.5625%;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 984px;
     }
 }
